--- a/sass/module/_iframeRWD.scss
+++ b/sass/module/_iframeRWD.scss
@@ -4,7 +4,7 @@
 .iframe-rwd  {
      position: relative;
      // height: 1000px;
-     padding-bottom: 65.25%;
+     padding-bottom: percentage(260 / 1180);
      padding-top: 30px;
      height: 0;
      overflow: hidden;
